feat: add inference scripts, clean model binaries

--- a/ml_model/Dockerfile
+++ b/ml_model/Dockerfile
@@ -6,8 +6,13 @@ COPY model.pkl /app/
 COPY inference_server.py /app/
 COPY requirements.txt /app/
 
+# wrapper script copy karo
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
 RUN pip install -r requirements.txt
 
 EXPOSE 8080
 
-CMD ["gunicorn", "-b", "0.0.0.0:8080", "inference_server:app"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+CMD []
